welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:6: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var x:Int
    ^Array2:28: error: object toInt is not a member of package ch
	ch.toInt=x
           ^